feat: VideoBlot completamente recriado com thumbnail real e cursor inline
- Deletado VideoBlot antigo complexo e problemático
- Criado novo VideoBlot simples usando tagName='img' para comportamento inline
- Implementada geração automática de thumbnail a partir de frame aleatório do vídeo
- Detecção de orientação (vertical/horizontal) com largura proporcional
- Altura fixa de 150px igual às imagens
- Cursor agora aparece ao lado como imagens (inline)
- Modal de reprodução funcional ao clicar
- Posicionamento correto do cursor após inserção (setSelection)
- CSS otimizado para comportamento inline consistente
- Performance melhorada com limpeza de elementos temporários

--- a/client/global.css
+++ b/client/global.css
@@ -386,10 +386,19 @@
 
   /* Remover espaçamento extra do Quill para blots de vídeo */
   .ql-video-embed {
-    margin: 0 !important;
+    margin: 4px !important;
     padding: 0 !important;
     line-height: 0 !important;
     display: inline-block !important;
+    vertical-align: top !important;
+    width: 200px !important;
+    height: 150px !important;
+  }
+
+  /* Forçar comportamento inline no editor Quill */
+  .ql-editor .ql-video-embed {
+    display: inline-block !important;
+    margin: 4px !important;
     vertical-align: top !important;
   }
 
